fixing outcomes on mobile.

--- a/src/container/App/App.scss
+++ b/src/container/App/App.scss
@@ -3,6 +3,7 @@
 .arrow {
   position: relative;
   height: 100%;
+  max-width: 1220px !important;
 
   .left-side {
     position: absolute;
@@ -26,5 +27,28 @@
     height: 80px;
     transform: rotate(105deg);
     border-radius: 0px 50px 50px 0px;
+  }
+}
+
+@media screen and (max-width: 991px) {
+  .arrow {
+    position: unset;
+    padding: 0 !important;
+    margin: 0 !important;
+
+    .left-side {
+      position: unset;
+      top: unset;
+      right: unset;
+      background-color: $p4-blue;
+      color: $white;
+      transform: unset;
+      border-radius: 0;
+      width: 100%;
+    }
+
+    .right-side {
+      display: none !important;
+    }
   }
 }
